[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Parallax.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Art/Game Title.png" type="Texture" id=4]
[ext_resource path="res://Art/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/MultiCam.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/Fx/ScreenFX.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Position2D.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 5 )

[node name="Main Menu" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiCam" type="Camera2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 640, 360 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
targets = [ "Position2D" ]

[node name="Parallax" type="Node2D" parent="." instance=ExtResource( 2 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScrFX" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -357.5
margin_top = 20.0
margin_right = 357.5
margin_bottom = 202.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -77.0
margin_right = 656.0
custom_fonts/font = SubResource( 1 )
text = "Made for the Github 2020 GameOFF Jam
Using Godot 3.2.2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 260.0
margin_right = 93.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1v1" type="Button" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 300.0
margin_right = 93.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "1 v 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 340.0
margin_right = 93.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
script = ExtResource( 8 )
[connection signal="button_up" from="UI/start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="UI/1v1" to="." method="_on_1v1_button_up"]
[connection signal="button_up" from="UI/exit" to="." method="_on_exit_button_up"]
